--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -50,6 +50,7 @@
         "@teambit/react.react-env": "0.0.44",
         "@teambit/typescript.typescript-compiler": "0.0.6",
         "ava": "^5.1.1",
+        "date-fns": "^2.29.3",
         "rescript": "^10.1.3"
       },
       "peerDependencies": {}
